bem: remove utilities and fix dark mode

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -21,10 +21,20 @@ html[data-theme="dark"] {
     background-color: $black;
     color: $white;
 
-    .b-fonts__select,
-    .darkgrey2,
-    .darkgrey3 {
+    .b-fonts__select {
         color: white;
+    }
+
+    .b-definitions {
+
+        &__word,
+        &__pos-heading,
+        &__bullet {
+            color: white;
+        }
+
+
+
     }
 }
 
