--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -172,9 +172,23 @@
     justify-content: space-between;
     align-items: center;
 
-    &__top * {
-      margin: 0px;
-    }
+  }
+
+  &__top * {
+    margin: 0px;
+  }
+
+  &__word {
+    font-size: 64px;
+    line-height: 77px;
+    font-weight: 900;
+    color: $darkgrey3;
+  }
+
+  &__phonetic {
+    font-size: 24px;
+    line-height: 29px;
+    color: $purple;
   }
 
   &__pos {
@@ -184,14 +198,16 @@
     place-items: center center;
 
 
-
-
     &-heading {
       display: inline-block;
       width: fit-content;
       margin: 0;
       margin-right: 1rem;
       margin-top: 2.25rem;
+      font-style: italic;
+      font-size: 24px;
+      line-height: 29px;
+      color: $darkgrey3;
     }
 
     &-line {
@@ -202,8 +218,19 @@
     }
   }
 
+  &__meaning {
+    font-size: 20px;
+    line-height: 24px;
+    color: $mediumgrey;
+    margin-top: 2rem;
 
+  }
 
+  &__bullet {
+    color: $darkgrey2;
+    font-size: 18px;
+    line-height: 24px;
+  }
 
   &__bullet::marker {
     color: $purple;
@@ -215,12 +242,29 @@
     margin-left: 1rem;
     text-decoration: none;
     cursor: pointer;
+    color: $mediumgrey;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 2rem;
+
+    &-span {
+      margin-left: 1rem;
+      color: $purple;
+    }
   }
 
   &__synonyms:hover {
     text-decoration: underline;
   }
 
+  &__examples {
+    color: $mediumgrey;
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 2rem;
+    margin-left: 2.4rem;
+    margin-top: 1rem;
+  }
 
   &__source {
     border-top: 2px solid $lightgrey;
@@ -228,6 +272,13 @@
     margin-top: 2rem;
     padding-top: 1rem;
     margin-bottom: 3rem;
+
+    &-url {
+      font-size: 16px;
+      line-height: 22px;
+      color: $mediumgrey;
+      margin-top: 2rem;
+    }
   }
 
 
